tests/security/transformTaintUncheckedHydration/output.txt
ERROR: TaintedData - input.hack:24:12 - Data from unauthorized user data found its way to generic output using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:22:20) ----> $id (input.hack:22:5) ----> EntityLoader::loadEntity#1 (input.hack:23:35) ----> call to EntityLoader::loadEntity (input.hack:8:8) ----> $entity (input.hack:23:5) ----> render#1 (input.hack:24:12)
ERROR: TaintedData - input.hack:25:17 - Data from unauthorized user data found its way to a logging method using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:22:20) ----> $id (input.hack:22:5) ----> EntityLoader::loadEntity#1 (input.hack:23:35) ----> call to EntityLoader::loadEntity (input.hack:8:8) ----> $entity (input.hack:23:5) ----> log_message#1 (input.hack:25:17)
